--- a/workflow/cluster.yaml
+++ b/workflow/cluster.yaml
@@ -11,7 +11,7 @@ segway_train_unsupervised:
     ntasks: 1
     nodes: 1
     cpus-per-task: 1
-    mem-per-cpu: 4G
+    mem-per-cpu: 16G
     job-name: unsup_train
     time: 7-00:00:00
     partition: hoffmangroup
@@ -20,7 +20,7 @@ segway_train_ve:
     ntasks: 1
     nodes: 1
     cpus-per-task: 1
-    mem-per-cpu: 4G
+    mem-per-cpu: 16G
     job-name: unsup_train
     time: 7-00:00:00
     partition: hoffmangroup
@@ -29,7 +29,52 @@ segway_annot_unsupervised:
     ntasks: 1
     nodes: 1
     cpus-per-task: 1
-    mem-per-cpu: 4G
+    mem-per-cpu: 16G
     job-name: VE_unsup
     time: 7-00:00:00
+    partition: hoffmangroup
+
+segway_annot_ve:
+    ntasks: 1
+    nodes: 1
+    cpus-per-task: 1
+    mem-per-cpu: 16G
+    job-name: VE_unsup
+    time: 7-00:00:00
+    partition: hoffmangroup
+
+bg_to_pseudo_chr_bed:
+    ntasks: 1
+    nodes: 1
+    cpus-per-task: 1
+    mem-per-cpu: 32G
+    job-name: bg_to_pseudo_chr_bed
+    time: 0-4:00:00
+    partition: hoffmangroup
+
+make_percentile:
+    ntasks: 1
+    nodes: 1
+    cpus-per-task: 1
+    mem-per-cpu: 128G
+    job-name: percent
+    time: 0-4:00:00
+    partition: hoffmangroup
+
+scoring_PR:
+    ntasks: 1
+    nodes: 1
+    cpus-per-task: 1
+    mem-per-cpu: 16G
+    job-name: scoring
+    time: 0-4:00:00
+    partition: hoffmangroup
+
+run_segzoo:
+    ntasks: 1
+    nodes: 1
+    cpus-per-task: 8
+    mem-per-cpu: 8G
+    job-name: segzoo
+    time: 0-1:00:00
     partition: hoffmangroup
